--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <!-- Bootstrap grid CSS -->
     <link href="css/bootstrap-grid.min.css" rel="stylesheet">
+    <!-- Fonts Google Roboto -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
 
     <!-- Place your stylesheet here-->
     <link href="css/main.css" rel="stylesheet" type="text/css">
