--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="./favicon.ico">
 
-    <title></title>
+    <title>Созидант</title>
 
     <!-- Bootstrap grid CSS -->
     <link href="css/bootstrap-grid.min.css" rel="stylesheet">
@@ -20,7 +20,25 @@
 
 <body>
 
-    
+    <div class="container">
+      <div class="top-nav">
+        <div class="row justify-content-between align-items-center">
+          <div class="col-md-auto">
+            <img src="img/logo.jpg" width="200" height="60" alt="Логотип компании Созидант">
+          </div>
+          <div class="col-md-auto">
+            <ul class="top-nav_menu">
+              <li><a href="#">Главная</a></li>
+              <li><a href="#">О компании</a></li>
+              <li><a href="#">Наши услуги</a></li>
+              <li><a href="#">Структура</a></li>
+              <li><a href="#">Инвесторам</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
     <!-- Bootstrap core JavaScript
