--- a/index.html
+++ b/index.html
@@ -111,6 +111,57 @@
         </div>
       </div>
     </div>
+    
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="copy">
+              <p>Copyright &copy; 2014 - 2017</p>
+              <a class="footer-policy-link" href="#">Политика конфиденциальности</a>
+              <small>Иногда человек не может уснуть потому, что принимает неудобную позу. Ложитесь так, чтобы вам было комфортно. Лучше использовать подушку средней жесткости. </small>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <ul class="footer_menu">
+              <li><a href="#">Главная</a></li>
+              <li><a href="#">О компании</a></li>
+              <li><a href="#">Наши услуги</a></li>
+              <li><a href="#">Структура</a></li>
+              <li><a href="#">Инвесторам</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </div>
+          <div class="col-md">
+            <ul class="footer_menu">
+              <li><a href="#">Земля</a></li>
+              <li><a href="#">Жилая недвижимость</a></li>
+              <li><a href="#">Коммерческая недвижимость</a></li>
+              <li><a href="#">Новостройки</a></li>
+              <li><a href="#">Дома/Коттеджи</a></li>
+              <li><a href="#">Строительство</a></li>
+              <li><a href="#">Аренда</a></li>
+            </ul>
+          </div>
+          <div class="col-md">
+            <div class="footer-contacts">
+              <p class="footer-contacts_phone">8 (800) 850-50-50</p>
+              <p class="footer-contacts_address">г. Москва, ул. Морозова, д.12, 3 этаж</p>
+              <p class="footer-contacts_address">г. Москва, ул. Ленина, д.23, офис 2</p>
+              <p class="footer-contacts_email">sozidant@mail.ru</p>
+            </div>
+
+            <div class="footer-social-links">
+              <ul>
+                <li><a href="#"><img src="img/socials/vk.png" width="35" height="35" alt="Вконтакте"></a></li>
+                <li><a href="#"><img src="img/socials/fb.png" width="35" height="35" alt="Фейсбук"></a></li>
+                <li><a href="#"><img src="img/socials/inst.png" width="35" height="35" alt="Инстаграм"></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
     <!-- Bootstrap core JavaScript
