--- a/about.html
+++ b/about.html
@@ -87,11 +87,31 @@
         
         <div class="col-lg-8 col-sm-12">
           <div class="content">
-            <h2>Созидант</h2>
-            <p>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло. Его многочисленные, убого тонкие по сравнению с остальным телом ножки беспомощно копошились у него перед глазами.</p>
-            <p>«Что со мной случилось?» — подумал он. Это не было сном. Его комната, настоящая, разве что слишком маленькая, но обычная комната, мирно покоилась в своих четырех хорошо знакомых стенах. Над столом, где были разложены распакованные образцы сукон — Замза был коммивояжером, — висел портрет, который он недавно вырезал из иллюстрированного журнала и вставил а красивую золоченую рамку. На портрете была изображена дама в меховой шляпе и боа, она сидела очень прямо и протягивала зрителю тяжелую меховую муфту, в которой целиком исчезала ее рука.</p>
-            <p>Затем взгляд Грегора устремился в окно, и пасмурная погода — слышно было, как по жести подоконника стучат капли дождя — привела его и вовсе в грустное настроение. «Хорошо бы еще немного поспать и забыть всю эту чепуху», — подумал он, но это было совершенно неосуществимо, он привык спать на правом боку, а в теперешнем</p>
-            <a href="#" class="btn btn-primary">Узнать больше о компании</a>
+            <h2>О компании</h2>
+            <p>На портрете была изображена дама в меховой шляпе и боа, она сидела очень прямо и протягивала зрителю тяжелую меховую муфту, в которой целиком исчезала ее рука.</p>
+            <p>Затем взгляд Грегора устремился в окно, и пасмурная пог0да - слышно было, как по жести полоконника стучат капли дождя - привела его и вовсе в грустное настроение.</p>
+            <p>«Хорошо бы еще немного поспать и забыть всю эту чепуху», - подумал он, но это было совершенно неосуществимо, он привык спать на правом боку, а в теперешнем своем состоянии он никак не мог принять этого положения.</p>
+            <p>С какой бы силой ни поворачивался он на правый бок, он неизменно сваливался опять на спину. Закрыв глаза, чтобы не видеть своих барахтающихся ног, он пр0делал это добрую сотню раз и отказался от этих попыток только тогда, когда почувствовал какую-то неведомую дотоле, тупую и слабую боль в боку. «Ах ты, господи, - подумал он, - какую я выбрал хлопотную профессию!</p>
+          </div>
+          <h2>Руководство Созидант</h2>
+          <div class="team">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/team/1.png" width="242" height="342" alt="Изображение директора">
+                <h4>Петров Дмитрий</h4>
+                <p>Руководитель компании</p>
+              </div>
+              <div class="col-md-4">
+                <img src="img/team/2.jpg" width="242" height="342" alt="Изображение помощника">
+                <h4>Иванова Василиса</h4>
+                <p>Директор, руководитель Департамента по работе с недвижимостью</p>
+              </div>
+              <div class="col-md-4">
+                <img src="img/team/3.png" width="242" height="342" alt="Изображение помощника">
+                <h4>Василькова Анна</h4>
+                <p>Руководитель Департамента по работе с клиентами</p>
+              </div>
+            </div>
           </div>
           
           <div class="directions">
