--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
           </div>
         </div>
         
-        <div class="col-lg-8 col-sm-12">
+        <div class="col-lg-8">
           <div class="content">
             <h2>О компании</h2>
             <p>На портрете была изображена дама в меховой шляпе и боа, она сидела очень прямо и протягивала зрителю тяжелую меховую муфту, в которой целиком исчезала ее рука.</p>
