Стилизовал элементы формы

--- a/investments.html
+++ b/investments.html
@@ -140,6 +140,16 @@
                   <span class="calc-summ_invest_label">Сумма:</span>
                   <span class="calc-summ_invest_num">1 200 00 руб.</span>
                 </div>
+                <div>
+                  <span class="calc-total">
+                    <strong>2 351 569 руб.</strong><br>
+                    <small>Сумма через 36 месяцев</small>
+                  </span>
+                  <span class="calc-monthly">
+                    <strong>32 000 руб.</strong><br>
+                    <small>Ежемесячный доход</small>
+                  </span>
+                </div>
               </div>
             </div>
           </div>
