Сделал калькулятор с помощью jQuery

--- a/investments.html
+++ b/investments.html
@@ -17,6 +17,7 @@
     <!-- Slick Slider -->
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="slick/slick.css">
+    <link rel="stylesheet" href="css/powerange.min.css">
 
     <!-- Place your stylesheet here-->
     <link href="css/main.css" rel="stylesheet" type="text/css">
@@ -98,31 +99,31 @@
               <div class="col-md-6">
                 <div class="calc-programms">
                   <div class="calc-radio">
-                    <input type="radio" name="programms" id="first" checked>
+                    <input type="radio" data-month="6" data-per="0.2" name="programms" id="first" checked>
                     <label for="first">
                       <span>20% годовых <small>на 6 месяцев</small></span>
                     </label>
                   </div>
                   <div class="calc-radio">
-                    <input type="radio" name="programms" id="second">
+                    <input type="radio" data-month="12" data-per="0.24" name="programms" id="second">
                     <label for="second">
                       <span>24% годовых <small>на 1 год</small></span>
                     </label>
                   </div>
                   <div class="calc-radio">
-                    <input type="radio" name="programms" id="third">
+                    <input type="radio" data-month="24" data-per="0.26" name="programms" id="third">
                     <label for="third">
                       <span>26% годовых <small>на 2 года</small></span>
                     </label>
                   </div>
                   <div class="calc-radio">
-                    <input type="radio" name="programms" id="fourth">
+                    <input type="radio" data-month="36" data-per="0.28" name="programms" id="fourth">
                     <label for="fourth">
                       <span>28% годовых <small>на 3 года</small></span>
                     </label>
                   </div>
                   <div class="calc-radio">
-                    <input type="radio" name="programms" id="fifth">
+                    <input type="radio" data-month="48" data-per="0.32" name="programms" id="fifth">
                     <label for="fifth">
                       <span>32% годовых <small>на 4 года</small></span>
                     </label>
@@ -135,18 +136,18 @@
               </div>
               <div class="col-md-6">
                 <h4>Укажите сумму инвестиций</h4>
-                <input type="range" name="summ">
+                <input class="calc-range" type="text" name="summ">
                 <div class="calc-summ_invest">
                   <span class="calc-summ_invest_label">Сумма:</span>
-                  <span class="calc-summ_invest_num">1 200 00 руб.</span>
+                  <span class="calc-summ_invest_num"><span>100 000</span> руб.</span>
                 </div>
                 <div>
                   <span class="calc-total">
-                    <strong>2 351 569 руб.</strong><br>
-                    <small>Сумма через 36 месяцев</small>
+                    <strong><span id="total">110 000</span> руб.</strong><br>
+                    <small>Сумма через <span id="month">36</span> месяцев</small>
                   </span>
                   <span class="calc-monthly">
-                    <strong>32 000 руб.</strong><br>
+                    <strong><span>32 000</span> руб.</strong><br>
                     <small>Ежемесячный доход</small>
                   </span>
                 </div>
@@ -239,5 +240,6 @@
     <script>window.jQuery || document.write('<script src="js/jquery-3.3.1.slim.min.js"><\/script>')</script>
     <script src="slick/slick.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/powerange.min.js"></script>
 </body>
 </html>
