--- a/index.html
+++ b/index.html
@@ -170,6 +170,24 @@
         </div>
       </div>
     </footer>
+    
+    <div class="modal">
+      <div class="modal-content">
+        <div class="close">&times;</div>
+        <h4>Заполните поля</h4>
+        <p>Мы свяжемся с вами в ближайшее время</p>
+        <div class="modal-form">
+          <form action="">
+            <input type="text" placeholder="Ваше имя">
+            <input type="text" placeholder="Ваш телефон">
+            <button type="submit" class="btn btn-primary modal-form_btn">Отправить заявку</button>
+            <small>
+              Нажимая кнопку, даю своё согласие на <a href="#">обработку пероснальных данных</a>
+            </small>
+          </form>
+        </div>
+      </div>
+    </div>
 
 
     <!-- Bootstrap core JavaScript
